Fix weird CSS where topbar is too big close #15

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 #footer {
     background: #333333;
-    margin: 50px -50px -50px;
+    margin: 0px;
     padding-bottom: 30px;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.05);
 }
